--- a/react-todolist/src/index.css
+++ b/react-todolist/src/index.css
@@ -1,9 +1,13 @@
+*{
+	box-sizing: border-box;
+}
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
   font-size: 16px;
   color: #333;
+  background: #f0f0f0
 }
 ul, li{
 	margin: 0;
@@ -17,19 +21,17 @@ a{
 input[type=checkbox], label{
 	cursor: pointer;
 }
-.title{
-	text-align: center
-}
 .main{
-	width: 500px;
-	margin: 0 auto;
+	width: 550px;
+	margin: 30px auto;
+	background: #fff
 }
 .todoform{
 	text-align: center;
 }
 .todoform input{
-	width: 350px;
-	height: 25px;
+	width: 550px;
+	height: 50px;
 	text-indent: 1em;
 	font-size: 20px;
 }
@@ -38,25 +40,44 @@ input[type=checkbox], label{
 	vertical-align: top;
 }
 .todolist {
-	padding: 20px 50px;
+	padding: 10px 0 0 0;
+	border: 1px solid #ccc;
+	border-top: 0;
 }
 .todolist li{
-	/*width: 100%;*/
-	height: 30px;
-	line-height: 30px;
+	height: 40px;
+	line-height: 40px;
 	border-bottom: 1px solid #ccc
 }
-.todolist li input{
+.todolist li input[type=checkbox]{
 	float: left;
-	margin-top: 8px;
+	margin: 14px 0 0 5px;
 }
 .todolist li span{
 	display: inline-block;
 	margin-left: 10px;
 }
 .todolist li a{
-	float: right
+	display: none;
+	float: right;
+	margin-right: 10px;
+	font-size: 20px;
+}
+.todolist li a:hover{
+	color: #f20;
+}
+.todolist li:hover a{
+	display: inline-block
 }
 .todofooter{
 	margin: 10px 0;
+	padding: 0 10px;
+}
+.editInput{
+	width: 90%;
+	height: 40px;
+	margin-left: 5px;
+	vertical-align: top;
+	text-indent: 1em;
+	font-size: 18px;
 }
